[package]
authors = ["FeÌlix Saparelli <felix@passcod.name>"]
name = "constellationd"
version = "0.1.0"

[dependencies]
base64 = "0.9.0"
futures = "0.1.18"
lazy_static = "1.0.0"
net2 = "0.2.31"
rust_sodium = "0.7.0"
serde = "1.0.27"
serde_bytes = "0.10.3"
serde_cbor = "0.8.2"
serde_derive = "1.0.27"
serde_json = "1.0.9"
tokio-core = "0.1.12"
