[package]
authors = ["FeÌlix Saparelli <felix@passcod.name>"]
license = "Artistic-2.0"
name = "constellationd"
version = "0.1.0"

[dependencies]
base64 = "0.9.0"
bytes = "0.4.6"
futures = "0.1.18"
interfaces = "0.0.4"
itertools = "0.7.6"
lazy_static = "1.0.0"
net2 = "0.2.31"
rust_sodium = "0.7.0"
serde = "1.0.27"
serde_bytes = "0.10.3"
serde_cbor = "0.8.2"
serde_derive = "1.0.27"
serde_json = "1.0.9"
sled = "0.15.3"
tempdir = "0.3.6"
tokio = "0.1.1"
tokio-io = "0.1.5"
tokio-timer = "0.1.2"
